20240127 Substitute observables with pauli words | Add `pad_num_ptcs` to datamodule

--- a/demo_compare_enc.ipynb
+++ b/demo_compare_enc.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,8 +87,12 @@
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (1, 0, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result with `num_ptcs = 2` | `num_batch = 3` | `aggr = MEAN`:\n",
@@ -124,8 +128,8 @@
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (2, 1, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
-      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
-      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n"
      ]
     },
@@ -143,6 +147,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result with `num_ptcs = 4` | `num_batch = 3` | `aggr = MEAN`:\n",
       " - QCGNN_IX (PennyLane) ->\n",
@@ -177,8 +185,12 @@
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
-      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n"
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n"
      ]
     },
     {
@@ -230,14 +242,22 @@
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (4, 3, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
-      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n"
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Global seed set to 1\n",
+      "Global seed set to 1\n",
+      "Global seed set to 1\n",
+      "Global seed set to 1\n",
       "Global seed set to 1\n",
       "Global seed set to 1\n",
       "Global seed set to 1\n",
@@ -283,29 +303,13 @@
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (1, 0, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
-      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 1\n",
-      "Global seed set to 1\n",
-      "Global seed set to 1\n",
-      "Global seed set to 1\n",
-      "Global seed set to 1\n",
-      "Global seed set to 1\n",
-      "Global seed set to 1\n",
-      "Global seed set to 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result with `num_ptcs = 2` | `num_batch = 3` | `aggr = MEAN`:\n",
       " - QCGNN_IX (PennyLane) ->\n",
@@ -340,8 +344,28 @@
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (2, 1, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 1\n",
+      "Global seed set to 1\n",
+      "Global seed set to 1\n",
+      "Global seed set to 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result with `num_ptcs = 4` | `num_batch = 3` | `aggr = MEAN`:\n",
@@ -376,6 +400,9 @@
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n"
      ]
     },
@@ -394,7 +421,8 @@
      "output_type": "stream",
      "text": [
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
-      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result with `num_ptcs = 8` | `num_batch = 3` | `aggr = MEAN`:\n",
@@ -430,14 +458,20 @@
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (4, 3, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
-      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n"
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Global seed set to 2\n",
+      "Global seed set to 2\n",
       "Global seed set to 2\n",
       "Global seed set to 2\n",
       "Global seed set to 2\n",
@@ -485,8 +519,12 @@
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (1, 0, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result with `num_ptcs = 2` | `num_batch = 3` | `aggr = MEAN`:\n",
@@ -514,15 +552,22 @@
       "# ModelLog: Qubits (IR, WK, NR) = (2, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = pennylane\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (2, 0, 2)\n"
+      "# ModelLog: Qubits (IR, WK, NR) = (2, 0, 2)\n",
+      "# ModelLog: Quantum device  = default.qubit\n",
+      "# ModelLog: Quantum backend = qiskit\n",
+      "# ModelLog: Qubits (IR, WK, NR) = (2, 1, 2)\n",
+      "# ModelLog: Quantum device  = default.qubit\n",
+      "# ModelLog: Quantum backend = qiskit\n",
+      "# ModelLog: Qubits (IR, WK, NR) = (2, 1, 2)\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Global seed set to 2\n",
-      "Global seed set to 2\n",
       "Global seed set to 2\n",
       "Global seed set to 2\n",
       "Global seed set to 2\n",
@@ -533,15 +578,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (2, 1, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (2, 1, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
-      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result with `num_ptcs = 4` | `num_batch = 3` | `aggr = MEAN`:\n",
@@ -576,6 +616,9 @@
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n"
      ]
     },
@@ -594,7 +637,8 @@
      "output_type": "stream",
      "text": [
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
-      "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result with `num_ptcs = 8` | `num_batch = 3` | `aggr = MEAN`:\n",
@@ -630,8 +674,12 @@
       "# ModelLog: Quantum backend = qiskit\n",
       "# ModelLog: Qubits (IR, WK, NR) = (4, 3, 2)\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
+      "pauli_words_of_IX_combinations\n",
+      "build_full_circuit\n",
       "# ModelLog: **Warning** -> Using Hadamard initializaion.\n",
       "\n",
       "Result with `num_ptcs = 16` | `num_batch = 3` | `aggr = MEAN`:\n",
