--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -8,10 +8,11 @@
    "source": [
     "import os\n",
     "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
     "import lightning as L\n",
     "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from tqdm import tqdm\n",
     "\n",
     "import g_main\n",
     "import module_model\n",
@@ -21,15 +22,15 @@
     "shots = 1024\n",
     "\n",
     "general_config = g_main.json_config.copy()\n",
-    "general_config[\"batch_size\"]   = 10 # 300\n",
-    "general_config[\"rnd_seed\"]     = 0\n",
-    "general_config[\"max_num_ptcs\"]  = 4\n",
-    "general_config[\"num_bin_data\"] = 100 # 25 * 10 * 2 * (1-0.8) = 100 test data\n",
+    "general_config[\"batch_size\"] = 10\n",
+    "general_config[\"rnd_seed\"] = 0\n",
+    "general_config[\"max_num_ptcs\"] = 2\n",
+    "general_config[\"num_bin_data\"] = 100 # {100} * 10 * 2 * (1 - 0.8) = 400 test data\n",
     "L.seed_everything(general_config[\"rnd_seed\"])\n",
     "\n",
     "# Quantum configurations.\n",
-    "qidx = int(np.ceil(np.log2(general_config[\"max_num_ptcs\"])))\n",
-    "qnn, gl, gr  = 9, 1, 9\n",
+    "qidx = 1\n",
+    "qnn, gl, gr  = 7, 1, 7\n",
     "\n",
     "# Output directory.\n",
     "ibmq_dir = os.path.join(general_config[\"predictions_dir\"], \"ibmq\")\n",
@@ -44,31 +45,39 @@
    "source": [
     "class IBMQQCGNN(QCGNN):\n",
     "    \"\"\"Return additional measurement outputs.\"\"\"\n",
+    "    \n",
     "    def forward(self, x):\n",
-    "        # Original workflow.\n",
+    "        pt = x[..., 0]\n",
+    "        num_ptcs = torch.sum((pt > 0).float(), axis=-1, keepdim=True)\n",
     "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
     "        x = self.net(x)\n",
     "        x = torch.unflatten(\n",
     "            x, dim=-1, sizes=(2**self.num_ir_qubits, self.num_nr_qubits))\n",
-    "\n",
-    "        # Additional measurement outputs.\n",
-    "        meas = x.detach() # Measurement outputs.\n",
     "        \n",
-    "        # Original workflow.\n",
+    "        # Add this line.\n",
+    "        meas = x.detach() # Measurement outputs.\n",
+    "\n",
     "        x = x.mT\n",
-    "        x = torch.sum(x, dim=-1) * self.scale\n",
+    "        x = torch.sum(x, dim=-1)\n",
+    "\n",
+    "        if self.aggregation == \"SUM\":\n",
+    "            x = x * num_ptcs\n",
+    "        elif self.aggregation == \"MEAN\":\n",
+    "            x = x / num_ptcs\n",
     "        \n",
     "        return x, meas\n",
     "\n",
     "class IBMQQuantumRotQCGNN(g_main.QuantumRotQCGNN):\n",
     "    def __init__(self, num_ir_qubits, num_nr_qubits, num_layers, num_reupload, quantum_config):\n",
     "        \"\"\"Change phi from QCGNN to IBMQQCGNN.\"\"\"\n",
+    "        \n",
     "        super().__init__(\n",
     "            num_ir_qubits=num_ir_qubits,\n",
     "            num_nr_qubits=num_nr_qubits,\n",
     "            num_layers=num_layers,\n",
     "            num_reupload=num_reupload,\n",
     "            quantum_config=quantum_config,\n",
+    "            aggregation=\"SUM\",\n",
     "        )\n",
     "        \n",
     "        # Substitute QCGNN with IBMQQCGNN.\n",
@@ -119,13 +128,13 @@
     "    model.load_state_dict(new_state_dict)\n",
     "\n",
     "def prediction(x, data_config, quantum_config):\n",
-    "    # Choose pretrained model with number of particles = 8 -> qidx = log2(8) = 3\n",
-    "    model_suffix = f\"qidx3_qnn{qnn}_gl{gl}_gr{gr}\"\n",
+    "    # Choose pretrained model with number of particles = 16 -> qidx = log2(16) = 43\n",
+    "    model_suffix = f\"qidx4_qnn{qnn}_gl{gl}_gr{gr}\"\n",
     "\n",
     "    # Get checkpoints file.\n",
-    "    data_suffix = f\"{data_config['abbrev']}_cut(800,1000)_ptc8_bin10-500\"\n",
-    "    ckpt_key = f\"QuantumRotQCGNN_{model_suffix}-{data_suffix}\"\n",
-    "    ckpt_path = g_main.get_ckpt_path(ckpt_key)\n",
+    "    data_suffix = f\"{data_config['abbrev']}_ptc16_thres0.05-nb500_R0\"\n",
+    "    ckpt_key = f\"QCGNN_IX_{model_suffix}_SUM-{data_suffix}\"\n",
+    "    ckpt_path = g_main.get_ckpt_path(ckpt_key, general_config[\"rnd_seed\"])\n",
     "    \n",
     "    # Create model and load checkpoints.\n",
     "    model = IBMQQuantumRotQCGNN(qidx, qnn, gl, gr, quantum_config)\n",
@@ -146,17 +155,25 @@
     "    # 2-prong v.s. 1-prong.\n",
     "    g_main.generate_data_config(\n",
     "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
-    "        cut_pt=(800, 1000), subjet_radius=0, \n",
-    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
-    "        max_num_ptcs=general_config[\"max_num_ptcs\"]\n",
+    "        cut_pt=(800, 1000), subjet_radius=0, bin=10,\n",
+    "        num_bin_data=general_config[\"num_bin_data\"],\n",
+    "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
+    "        pad_num_ptcs=(2 ** qidx),\n",
+    "        pt_threshold=general_config[\"pt_threshold\"],\n",
+    "        num_ptcs_range=(2 ** qidx, 2 ** qidx),\n",
+    "        print_log=True,\n",
     "    ),\n",
     "    \n",
     "    # 3-prong v.s. 1-prong.\n",
     "    g_main.generate_data_config(\n",
     "        sig=\"VzToTt\", bkg=\"VzToQCD\", abbrev=\"TT-QCD\",\n",
-    "        cut_pt=(800, 1000), subjet_radius=0, \n",
-    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
-    "        max_num_ptcs=general_config[\"max_num_ptcs\"]\n",
+    "        cut_pt=(800, 1000), subjet_radius=0, bin=10,\n",
+    "        num_bin_data=general_config[\"num_bin_data\"],\n",
+    "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
+    "        pad_num_ptcs=(2 ** qidx),\n",
+    "        pt_threshold=general_config[\"pt_threshold\"],\n",
+    "        num_ptcs_range=(2 ** qidx, 2 ** qidx),\n",
+    "        print_log=True,\n",
     "    ),\n",
     "]"
    ]
@@ -168,7 +185,7 @@
    "outputs": [],
    "source": [
     "# Choose an IBMQ backend\n",
-    "ibmq_backend = input(\"Enter IBMQ backend = \")\n",
+    "ibmq_backend = input(\"Enter IBMQ backend = \") or \"ibmq_qasm_simulator\"\n",
     "\n",
     "# Prediction on IBMQ.\n",
     "for data_config in data_config_list:\n",
@@ -183,8 +200,7 @@
     "\n",
     "    # Buffers for saving data.\n",
     "    x, y_true, y_penl, meas_penl, y_ibmq, meas_ibmq = [torch.tensor([]) for _ in range(6)]\n",
-    "    for _x, _y_true in data_module.test_dataloader():\n",
-    "        \n",
+    "    for _x, _y_true in tqdm(data_module.test_dataloader()):\n",
     "        # Prediction on PennyLane.\n",
     "        _y_penl, _meas_penl = prediction(\n",
     "            x=_x,\n",
