--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -64,9 +64,6 @@
     "# Faster calculation on GPU but less precision.\n",
     "torch.set_float32_matmul_precision(\"medium\")\n",
     "\n",
-    "# See https://discuss.pennylane.ai/t/qml-prod-vs-direct-operators-product/3873\n",
-    "qml.operation.enable_new_opmath()\n",
-    "\n",
     "# QCGNN template to use\n",
     "QCGNN = module_model.QCGNN_IX"
    ]
@@ -501,19 +498,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_ckpt_path(ckpt_key: str):\n",
+    "def get_ckpt_path(ckpt_key: str, rnd_seed: int):\n",
     "    \"\"\"Returns the ckpt path for the given key\n",
     "\n",
     "    Args:\n",
     "        ckpt_key : str\n",
     "            The key that helps finding the correct ckpt directory.\n",
+    "        rnd_seed : int\n",
+    "            Random seed.\n",
     "    \"\"\"\n",
     "\n",
     "    # Find the correct ckpt file path.\n",
     "    pretrain_dir = general_config[\"pretrain_dir\"]\n",
     "    for dir_name in os.listdir(pretrain_dir):\n",
-    "        rnd_seed = int(dir_name[-1])\n",
-    "        if (ckpt_key in dir_name) and (rnd_seed == general_config[\"rnd_seed\"]):\n",
+    "        if (ckpt_key in dir_name) and (int(dir_name[-1]) == rnd_seed):\n",
     "            ckpt_dir = os.path.join(pretrain_dir, dir_name, \"checkpoints\")\n",
     "            ckpt_file = os.listdir(ckpt_dir)[0]\n",
     "            ckpt_path = os.path.join(ckpt_dir, ckpt_file)\n",
@@ -574,7 +572,7 @@
     "        data_ratio=data_ratio,\n",
     "        batch_size=batch_size,\n",
     "        graph=graph,\n",
-    "        max_num_ptcs=data_config[\"max_num_ptcs\"]\n",
+    "        pad_num_ptcs=data_config[\"pad_num_ptcs\"]\n",
     "    )"
    ]
   },
@@ -718,13 +716,13 @@
     "    elif mode == \"predict\":\n",
     "        # The ckpt key helped for finding correct checkpoints file.\n",
     "        ckpt_key = model_config[\"group_rnd\"]\n",
-    "        # Train 8 particles only, and use the parameters to test other number \n",
+    "        # Train 16 particles only, and use the parameters to test other number \n",
     "        # of particles.\n",
     "        if model_config['model_name'] == QuantumRotQCGNN.__name__:\n",
     "            gnn_idx_qubits = model_config['gnn_idx_qubits']\n",
     "            ckpt_key = ckpt_key.replace(f\"qidx{gnn_idx_qubits}\", \"qidx4\")\n",
     "        # Get the correct checkpoints file path.\n",
-    "        ckpt_path = get_ckpt_path(ckpt_key)\n",
+    "        ckpt_path = get_ckpt_path(ckpt_key, general_config[\"rnd_seed\"])\n",
     "        train_summary = trainer.test(\n",
     "            model=litmodel,\n",
     "            dataloaders=data_module.train_dataloader(),\n",
@@ -962,7 +960,10 @@
     "        subjet_radius: float,\n",
     "        num_bin_data: int,\n",
     "        max_num_ptcs: int,\n",
+    "        pad_num_ptcs: int,\n",
     "        pt_threshold: float,\n",
+    "        num_ptcs_range: tuple[int, int] = None,\n",
+    "        print_log: bool = False,\n",
     "    ):\n",
     "    \"\"\"Generate a dictionary of data configurations\n",
     "    \n",
@@ -987,6 +988,10 @@
     "            Maximum number of particles in each jet.\n",
     "        pt_threshold : int\n",
     "            Ratio of particle pt / jet pt.\n",
+    "        num_ptcs_range : tuple[int, int]\n",
+    "            Number of particles in range [a, b] (>=a & <=b).\n",
+    "        print_log : bool\n",
+    "            Print log when generating data.\n",
     "\n",
     "    Returns:\n",
     "        dict : Dictionary of data configurations.\n",
@@ -1001,9 +1006,10 @@
     "        \"bin\": bin,\n",
     "        \"num_bin_data\": num_bin_data,\n",
     "        \"max_num_ptcs\": max_num_ptcs,\n",
+    "        \"pad_num_ptcs\": pad_num_ptcs,\n",
     "        \"pt_threshold\": pt_threshold,\n",
-    "        \"num_ptcs_range\": None,\n",
-    "        \"print_log\": False,\n",
+    "        \"num_ptcs_range\": num_ptcs_range,\n",
+    "        \"print_log\": print_log,\n",
     "    }\n",
     "    data_config[\"data_suffix\"] = (\n",
     "        f\"{abbrev}_ptc{max_num_ptcs}_thres{pt_threshold}\"\n",
@@ -1019,6 +1025,7 @@
     "        cut_pt=(800, 1000), subjet_radius=0, bin=10,\n",
     "        num_bin_data=general_config[\"num_bin_data\"],\n",
     "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
+    "        pad_num_ptcs=general_config[\"max_num_ptcs\"],\n",
     "        pt_threshold=general_config[\"pt_threshold\"],\n",
     "    ),\n",
     "    \n",
@@ -1028,6 +1035,7 @@
     "        cut_pt=(800, 1000), subjet_radius=0, bin=10,\n",
     "        num_bin_data=general_config[\"num_bin_data\"],\n",
     "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
+    "        pad_num_ptcs=general_config[\"max_num_ptcs\"],\n",
     "        pt_threshold=general_config[\"pt_threshold\"],\n",
     "    ),\n",
     "]"
@@ -1083,7 +1091,8 @@
     "os.makedirs(pred_dir, exist_ok=True)\n",
     "\n",
     "# num_ptcs_range_list = [(2, 4), (8, 10), (14, 16)]\n",
-    "# prediction_tuple = product(range(1), num_ptcs_range_list, data_config_list)\n",
+    "# num_ptcs_range_list = [(2, 2), (4, 4), (8, 8)]\n",
+    "# prediction_tuple = product(range(3), num_ptcs_range_list, data_config_list)\n",
     "\n",
     "# # Uncomment the model you want to predict.\n",
     "# for rnd_seed, num_ptcs_range, data_config in prediction_tuple:\n",
