20240127 Add `return_meas` for QCGNN | Add "sending gmail" notification for IBMQ

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "\n",
     "import lightning as L\n",
     "import numpy as np\n",
@@ -15,6 +16,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "import g_main\n",
+    "import module_gmail\n",
     "import module_model\n",
     "\n",
     "QCGNN = module_model.QCGNN_IX\n",
@@ -29,7 +31,7 @@
     "L.seed_everything(general_config[\"rnd_seed\"])\n",
     "\n",
     "# Quantum configurations.\n",
-    "qidx = 1\n",
+    "qidx = int(np.ceil(np.log2(general_config[\"max_num_ptcs\"])))\n",
     "qnn, gl, gr  = 7, 1, 7\n",
     "\n",
     "# Output directory.\n",
@@ -43,30 +45,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class IBMQQCGNN(QCGNN):\n",
-    "    \"\"\"Return additional measurement outputs.\"\"\"\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        pt = x[..., 0]\n",
-    "        num_ptcs = torch.sum((pt > 0).float(), axis=-1, keepdim=True)\n",
-    "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
-    "        x = self.net(x)\n",
-    "        x = torch.unflatten(\n",
-    "            x, dim=-1, sizes=(2**self.num_ir_qubits, self.num_nr_qubits))\n",
-    "        \n",
-    "        # Add this line.\n",
-    "        meas = x.detach() # Measurement outputs.\n",
-    "\n",
-    "        x = x.mT\n",
-    "        x = torch.sum(x, dim=-1)\n",
-    "\n",
-    "        if self.aggregation == \"SUM\":\n",
-    "            x = x * num_ptcs\n",
-    "        elif self.aggregation == \"MEAN\":\n",
-    "            x = x / num_ptcs\n",
-    "        \n",
-    "        return x, meas\n",
-    "\n",
     "class IBMQQuantumRotQCGNN(g_main.QuantumRotQCGNN):\n",
     "    def __init__(self, num_ir_qubits, num_nr_qubits, num_layers, num_reupload, quantum_config):\n",
     "        \"\"\"Change phi from QCGNN to IBMQQCGNN.\"\"\"\n",
@@ -80,17 +58,19 @@
     "            aggregation=\"SUM\",\n",
     "        )\n",
     "        \n",
-    "        # Substitute QCGNN with IBMQQCGNN.\n",
-    "        self.phi = IBMQQCGNN(\n",
+    "        # Set `return_meas` = True.\n",
+    "        self.phi = QCGNN(\n",
     "            num_ir_qubits=num_ir_qubits,\n",
     "            num_nr_qubits=num_nr_qubits,\n",
     "            num_layers=num_layers,\n",
     "            num_reupload=num_reupload,\n",
     "            ctrl_enc=self.ctrl_enc,\n",
     "            shots=shots,\n",
+    "            aggregation=\"SUM\",\n",
+    "            return_meas=True,\n",
     "            **quantum_config\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    def forward(self, x):\n",
     "        # Additional measurement outputs from IBMQQCGNN.\n",
     "        x, meas = self.phi(x)\n",
@@ -187,67 +167,91 @@
     "# Choose an IBMQ backend\n",
     "ibmq_backend = input(\"Enter IBMQ backend = \") or \"ibmq_qasm_simulator\"\n",
     "\n",
-    "# Prediction on IBMQ.\n",
-    "for data_config in data_config_list:\n",
-    "    \n",
-    "    # Create the data module.\n",
-    "    data_module = g_main.generate_datamodule(\n",
-    "        data_config=data_config,\n",
-    "        data_ratio=general_config[\"data_ratio\"],\n",
-    "        batch_size=general_config[\"batch_size\"],\n",
-    "        graph=False\n",
-    "    )\n",
+    "# Record logs with `script` command.\n",
+    "current_time = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
+    "log_file = f\"_log_{current_time}.txt\"\n",
     "\n",
-    "    # Buffers for saving data.\n",
-    "    x, y_true, y_penl, meas_penl, y_ibmq, meas_ibmq = [torch.tensor([]) for _ in range(6)]\n",
-    "    for _x, _y_true in tqdm(data_module.test_dataloader()):\n",
-    "        # Prediction on PennyLane.\n",
-    "        _y_penl, _meas_penl = prediction(\n",
-    "            x=_x,\n",
-    "            data_config=data_config,\n",
-    "            quantum_config={\"qdevice\": \"default.qubit\", \"diff_method\": \"best\", \"qbackend\": \"\"}\n",
-    "        )\n",
-    "\n",
-    "        # Prediction on IBMQ.\n",
-    "        _y_ibmq, _meas_ibmq = prediction(\n",
-    "            x=_x,\n",
-    "            data_config=data_config,\n",
-    "            quantum_config={\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": ibmq_backend}\n",
-    "        )\n",
-    "\n",
-    "        # Dataset and true labels.\n",
-    "        x, y_true = torch.cat((x, _x)), torch.cat((y_true, _y_true))\n",
+    "try:\n",
+    "    # Prediction on IBMQ.\n",
+    "    for data_config in data_config_list:\n",
     "        \n",
-    "        # Save predictions to buffers.\n",
-    "        y_penl, meas_penl = torch.cat((y_penl, _y_penl)), torch.cat((meas_penl, _meas_penl))\n",
-    "        y_ibmq, meas_ibmq = torch.cat((y_ibmq, _y_ibmq)), torch.cat((meas_ibmq, _meas_ibmq))\n",
+    "        # Create the data module.\n",
+    "        data_module = g_main.generate_datamodule(\n",
+    "            data_config=data_config,\n",
+    "            data_ratio=general_config[\"data_ratio\"],\n",
+    "            batch_size=general_config[\"batch_size\"],\n",
+    "            graph=False\n",
+    "        )\n",
     "\n",
-    "    # Output dictionary    \n",
-    "    result = {\n",
-    "        \"x\": x, \"y_true\": y_true,\n",
-    "        \"y_penl\": y_penl, \"meas_penl\": meas_penl,\n",
-    "        \"y_ibmq\": y_ibmq, \"meas_ibmq\": meas_ibmq\n",
-    "    }\n",
+    "        # Buffers for saving data.\n",
+    "        x, y_true, y_penl, meas_penl, y_ibmq, meas_ibmq = [torch.tensor([]) for _ in range(6)]\n",
+    "        for _x, _y_true in tqdm(data_module.test_dataloader()):\n",
+    "            # Prediction on PennyLane.\n",
+    "            _y_penl, _meas_penl = prediction(\n",
+    "                x=_x,\n",
+    "                data_config=data_config,\n",
+    "                quantum_config={\n",
+    "                    \"qdevice\": \"default.qubit\",\n",
+    "                    \"diff_method\": \"best\",\n",
+    "                    \"qbackend\": \"\",\n",
+    "                }\n",
+    "            )\n",
     "\n",
-    "    # Save result to npy files.\n",
-    "    npy_file = (\n",
-    "        # backend - shots - abbrev\n",
-    "        f\"{ibmq_backend}-s{shots}-{data_config['abbrev']}_\"\n",
+    "            # Prediction on IBMQ.\n",
+    "            _y_ibmq, _meas_ibmq = prediction(\n",
+    "                x=_x,\n",
+    "                data_config=data_config,\n",
+    "                quantum_config={\n",
+    "                    \"qdevice\": \"qiskit.ibmq\",\n",
+    "                    \"diff_method\": \"parameter-shift\",\n",
+    "                    \"qbackend\": ibmq_backend,\n",
+    "                }\n",
+    "            )\n",
     "\n",
-    "        # rnd_seed - max_num_ptcs\n",
-    "        + f\"r{general_config['rnd_seed']}-p{general_config['max_num_ptcs']}_\"\n",
+    "            # Dataset and true labels.\n",
+    "            x, y_true = torch.cat((x, _x)), torch.cat((y_true, _y_true))\n",
+    "            \n",
+    "            # Save predictions to buffers.\n",
+    "            y_penl, meas_penl = torch.cat((y_penl, _y_penl)), torch.cat((meas_penl, _meas_penl))\n",
+    "            y_ibmq, meas_ibmq = torch.cat((y_ibmq, _y_ibmq)), torch.cat((meas_ibmq, _meas_ibmq))\n",
     "\n",
-    "        # num_bin_data\n",
-    "        + f\"n{general_config['num_bin_data']}_\"\n",
+    "        # Output dictionary    \n",
+    "        result = {\n",
+    "            \"x\": x, \"y_true\": y_true,\n",
+    "            \"y_penl\": y_penl, \"meas_penl\": meas_penl,\n",
+    "            \"y_ibmq\": y_ibmq, \"meas_ibmq\": meas_ibmq\n",
+    "        }\n",
     "\n",
-    "        # batch_size - qnn_gl_gr\n",
-    "        + f\"b{general_config['batch_size']}-{qnn}_{gl}_{gr}\"\n",
+    "        # Save result to npy files.\n",
+    "        npy_file = (\n",
+    "            # backend - shots - abbrev\n",
+    "            f\"{ibmq_backend}-s{shots}-{data_config['abbrev']}_\"\n",
     "\n",
-    "        # npy suffix.\n",
-    "        + \".npy\"\n",
-    "    )\n",
-    "    npy_path = os.path.join(ibmq_dir, npy_file)\n",
-    "    np.save(npy_path, result, allow_pickle=True)"
+    "            # rnd_seed - max_num_ptcs\n",
+    "            + f\"r{general_config['rnd_seed']}-p{general_config['max_num_ptcs']}_\"\n",
+    "\n",
+    "            # num_bin_data\n",
+    "            + f\"n{general_config['num_bin_data']}_\"\n",
+    "\n",
+    "            # batch_size - qnn_gl_gr\n",
+    "            + f\"b{general_config['batch_size']}-{qnn}_{gl}_{gr}\"\n",
+    "\n",
+    "            # npy suffix.\n",
+    "            + \".npy\"\n",
+    "        )\n",
+    "        npy_path = os.path.join(ibmq_dir, npy_file)\n",
+    "        np.save(npy_path, result, allow_pickle=True)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    subject = f\"Failed to run ibmq on {ibmq_backend}\"\n",
+    "    message = str(e)\n",
+    "\n",
+    "else:\n",
+    "    subject = f\"Finished running ibmq on {ibmq_backend}\"\n",
+    "    message = f\"Finish qidx4_qnn{qnn}_gl{gl}_gr{gr} with rnd_seed = {general_config['rnd_seed']}\"\n",
+    "\n",
+    "finally:\n",
+    "    module_gmail.send_email(subject, message, config=general_config)"
    ]
   }
  ],
